InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssessmentAnswer__c/vlocity_ins__AssessmentAnswer__c.object-meta.xml
<CustomObject>
    <description>Represents the answer to a given question on an Assessment. When defined for an assessment template, this represents a available answer to the parent question.</description>
    <label>Assessment Answer</label>
    <nameField>
        <label>Order</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>