InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssessmentAnswer__c/fields/vlocity_ins__Answer__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Answer__c</fullName>
    <label>Answer</label>
    <type>TextArea</type>
</CustomField>