InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssessmentAnswer__c/fields/vlocity_ins__IsTemplateAnswer__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsTemplateAnswer__c</fullName>
    <formula>vlocity_ins__AssessmentQuestionId__r.vlocity_ins__AssessmentId__r.vlocity_ins__IsTemplate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Template Answer</label>
    <type>Checkbox</type>
</CustomField>