InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssessmentAnswer__c/fields/vlocity_ins__QuestionType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__QuestionType__c</fullName>
    <formula>TEXT(vlocity_ins__AssessmentQuestionId__r.vlocity_ins__QuestionType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Type</label>
    <type>Text</type>
</CustomField>